BE/error/src/main/java/com/example/demo/common/support/dto/AbstractDto.java
package com.example.demo.common.support.dto;

public interface AbstractDto {
}
